# AI-agent-poc

./: .gitignore  README.md  bundle.js  index.html  pyproject.toml
.github/workflows/: main.yaml
app/: agent.py  main.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  types.ts
frontend/src/services/: socket.ts  useWebSocket.ts
server/: .env.example  Makefile  README.md  langgraph.json  pyproject.toml
server/app/: agent.py  graph.py  main.py  prompts.py  state.py  tools.py  types.py  utils.py
v1/frontend/: tsconfig.json
v1/server/: Makefile  chroma.sqlite3
v1/server/app/: agent.py  graph.py  tools.py
v1/server/k8s_index/: chroma.sqlite3
v1/server/llm/: openai_client.py
v2/frontend/src/: index.html
v2/server/: pyproject.toml
v2/server/app/: agent.py  main.py
v2/server/rag/: update_index.py
v3-simple-open-ai-agent/frontend/: webpack.config.js
v3-simple-open-ai-agent/server/: Makefile  pyproject.toml
v3-simple-open-ai-agent/server/app/: agent.py  main.py
v3-simple-open-ai-agent/server/k8s_agent/: agent.py
v3-simple-open-ai-agent/server/logger/: cust_logger.py
v4-react-open-ai-agent/server/: pyproject.toml
v4-react-open-ai-agent/server/agent_core/: agent.py  utils.py
v4-react-open-ai-agent/server/app/: invoke_agent.py  main.py
v4-react-open-ai-agent/server/llm/: openai_client.py
v4-react-open-ai-agent/server/tools/: calculation.py  date.py  search_wikipedia.py  tool.py
v5-langgraph-agent/: README.md
v5-langgraph-agent/frontend/: README.md
v5-langgraph-agent/server/: pyproject.toml
v5-langgraph-agent/server/agent_core/: agent_factory.py  lang_graph_agent.py  tools.py
v5-langgraph-agent/server/app/: invoke_agent.py  main.py
v6-langgraph-agent-with-rag/frontend/src/: App.tsx
v6-langgraph-agent-with-rag/frontend/src/services/: socket.ts
v6-langgraph-agent-with-rag/server/: Dockerfile  Makefile  invoke_agent.py  main.py  pyproject.toml
v6-langgraph-agent-with-rag/server/agent_core/: agent_factory.py  lang_graph_rag_agent.py  tools.py
v7-langgraph-agent-evaluation/frontend/src/: App.css
v7-langgraph-agent-evaluation/server/: Makefile  invoke_agent.py
v7-langgraph-agent-evaluation/server/agent_core/: agent_factory.py  react_agent.py  tools.py
v7-langgraph-agent-evaluation/server/evaluation/: evaluation.py  evaluator.py
v7-langgraph-agent-evaluation/server/rag_index/: rag_index.py
v8-langgraph-agent-advanced-prompt/server/: README_Langsmith.md  invoke_agent.py  main.py  pyproject.toml
v8-langgraph-agent-advanced-prompt/server/agent_core/: agent_factory.py  content_generator_agent.py  react_agent.py
v8-langgraph-agent-advanced-prompt/server/agent_core/prompts/: linear_ticket_prompt.py  prompt_by_key.py  system_prompts.py
v8-langgraph-agent-advanced-prompt/server/evaluation/: dataset.jsonl
