[tool.poetry]
name = "ai-agent-poc"
version = "0.1.0"
description = "A proof of concept project using FastAPI"
authors = ["Your Name <viktor.vasylkovskyi@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
google-cloud-aiplatform = { version = "^1.75.0", extras = ["langchain", "reasoningengine"] }
fastapi = ">=0.109.0"
starlette = ">=0.38.6"
uvicorn = ">=0.26.0"
langgraph-cli = {version = "^0.1.65", extras = ["inmem"]}
langchain-openai = "^0.2.12"
langgraph = "^0.2.59"
python-socketio = "^5.11.4"
langchain-community = "^0.3.12"
ipython = "^8.30.0"
tiktoken = "^0.8.0"
langchainhub = "^0.1.21"
chromadb = "^0.5.23"
langchain = "^0.3.13"
langchain-text-splitters = "^0.3.4"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
colorama = "^0.4.6"
llama-index = "^0.12.9"
unstructured = "^0.16.12"
pdfminer = "^20191125"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3